@@ -1,5 +1,6 @@
 attribute	application	test09.p
 attribute	basetime	0
+attribute	nv_size	0
 attribute	perl_version	0
 attribute	ticks_per_sec	0
 attribute	xs_version	0
