@@ -6,9 +6,12 @@ Devel::NYTProf:Changes - List of significant changes to Devel::NYTProf
 
 =head2 Changes in Devel::NYTProf
 
+  NOTE: File format changed. Old profiles can't be read.
+
   Fixed accounting for time spent executing subs that were
     compiled in string evals.
-  Improved formating of stats for subs called by a statement;
+  Fixed problems with names containing newlines.
+  Improved formating of stats for subs called by a statement.
   Added support for .pmc files.
 
 =head2 Changes in Devel::NYTProf 2.02 (svn r361) 24 Jul 2008
